--- a/src/pages/index/index.module.scss
+++ b/src/pages/index/index.module.scss
@@ -1,19 +1,25 @@
 @import '~@/src/assets/styles/default.scss';
 
 .swiper {
-    height: 500px;
+    height: 400px;
 
     image {
         width: 100%;
     }
 }
 
-.category {
-    display: flex;
+.channel {
+    margin-top: $margin-md;
+    display   : flex;
 
     >view {
         text-align: center;
         flex      : 1;
+
+        image {
+            width : $icon-size-sm;
+            height: $icon-size-sm;
+        }
     }
 
     :global(.at-icon) {
@@ -21,9 +27,52 @@
     }
 }
 
+.category {
+    margin-top: $margin-md;
+    font-size : $font-size-xss;
+    padding   : 0 $padding-md;
+}
 
-.banner-img {
-    display      : block;
-    height       : 100px;
-    border-radius: $border-radius-lg;
+.category-grid {
+    margin-top           : $margin-xs;
+    width                : 100%;
+    display              : grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap                  : $padding-xs;
+
+    >view {
+        display           : grid;
+        grid-template-rows: auto 1fr;
+
+        >image {
+            width : 100%;
+            height: $grid-img-md;
+            color : $text-color-secondary;
+        }
+    }
+
+    .cg-item-desc {
+        display      : grid;
+        align-content: space-between;
+        font-size    : $font-size-xss;
+        color        : $text-color-secondary;
+        line-height  : $line-height-lg;
+        margin-top   : $margin-xss;
+
+        text {
+            display: block;
+
+            &:last-child {
+                font-weight: $weight-xs;
+                color      : $highlight-color;
+            }
+        }
+    }
+}
+
+.footer {
+    text-align: center;
+    margin    : $margin-sm 0;
+    padding   : $padding-xss 0;
+    color     : $text-color-secondary;
 }
